--- a/Spring/Lavanderia/demo/src/main/resources/application.properties
+++ b/Spring/Lavanderia/demo/src/main/resources/application.properties
@@ -1,1 +1,7 @@
+spring.datasource.url=jdbc:mysql://localhost:3306/lavanderia
+spring.datasource.username=root
+spring.datasource.password=Lupettino1996
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+# Imposta Hibernate per la creazione automatica del database e delle tabelle
+spring.jpa.hibernate.ddl-auto=update
